MDL-47494 ddwtos: NOBUG css to fix alignment when superscripts and subscripts in drag boxes
Fixes weird layout bug with web browsers that means the boxes will not line up.

--- a/question/type/ddwtos/styles.css
+++ b/question/type/ddwtos/styles.css
@@ -80,3 +80,16 @@
 .que.ddwtos .group8 {
     background-color: #F0E68C;
 }
+
+.que.ddwtos sub,
+.que.ddwtos sup {
+    font-size: 80%;
+    position: relative;
+    vertical-align: baseline;
+}
+.que.ddwtos sup {
+    top: -0.4em;
+}
+.que.ddwtos sub {
+    bottom: -0.2em;
+}
